Deploy user Activation
